# otus-cpp

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  allocator.h  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  filter.h  functions.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  lib.cpp  lib.h  main.cpp  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  menudata.js  meta__functions_8h.html  meta__functions_8h__dep__incl.map  meta__functions_8h__dep__incl.md5  meta__functions_8h__incl.map  meta__functions_8h__incl.md5  meta__functions_8h_source.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespacemy.html  namespacemy_1_1detail.html  namespacemy_1_1meta.html  namespaces.html  print__ip_8h.html  print__ip_8h__dep__incl.map  print__ip_8h__dep__incl.md5  (+22 more)
02-ip_filter/: CMakeLists.txt  input.h  ip.h  main.cpp  utils.cpp  utils.h
03-allocator/: .travis.yml  CMakeLists.txt  allocator.h  list.h
04-print_ip/: CMakeLists.txt  Doxyfile
04-print_ip/src/: meta_functions.h
05-editor/: .travis.yml  CMakeLists.txt
05-editor/docs/html/: annotated.html  application_8h.html  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h__incl.map  application_8h__incl.md5  application_8h_source.html  circle_8h.html  circle_8h__dep__incl.map  circle_8h__incl.map  circle_8h__incl.md5  circle_8h_source.html  classes.html  classmy_1_1Application-members.html  classmy_1_1Application.html  classmy_1_1Circle-members.html  classmy_1_1Circle.html  classmy_1_1Circle__inherit__graph.md5  classmy_1_1Document__coll__graph.md5  classmy_1_1Document__inherit__graph.map  classmy_1_1IRenderable.html  classmy_1_1IRenderable__inherit__graph.map  classmy_1_1IShape-members.html  classmy_1_1IShape.html  classmy_1_1IShape__coll__graph.map  classmy_1_1IShape__inherit__graph.map  classmy_1_1IShape__inherit__graph.md5  classmy_1_1Rectangle-members.html  classmy_1_1Rectangle__coll__graph.md5  classmy_1_1Segment-members.html  classmy_1_1Segment.html  color_8h.html  color_8h__dep__incl.map  color_8h__dep__incl.md5  color_8h__incl.map  color_8h__incl.md5  dir_000000_000001.html  dir_000001_000002.html  dir_000002_000004.html  dir_08b03aabef5f7e8c5c26c812ba7beddf.html  (+61 more)
05-editor/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_e.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_2.js  files_3.js  files_6.js  files_7.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js
05-editor/src/: main.cpp
05-editor/src/application/: application.h
05-editor/src/document/: file_io.h
05-editor/src/render/: renderable.h
05-editor/src/shape/: rectangle.h  segment.h  shape.h
05-editor/src/utils/: color.h  point.h
06-matrix/: .travis.yml  CMakeLists.txt  Doxyfile  version.h.in
06-matrix/src/: main.cpp  matrix.h  tests.cpp
07-bulk/: Doxyfile
07-bulk/src/: console_reader.cpp  console_writer.h  dummy_command.cpp  dummy_command_processor.cpp  dummy_command_processor.h  file_writer.h  main.cpp
09-bayan/: CMakeLists.txt  Doxyfile  README.md
09-bayan/src/: filesystem_traverser.h  main.cpp  mask_filesystem_traverser.cpp
09-bayan/src/hash/: crc16.cpp  crc16.h  crc32.h
09-bayan/test/: tests.cpp
10-bulkmt/: Doxyfile
10-bulkmt/src/: main.cpp
11-async/lib/: async.cpp  async.h
11-async/src/: client.cpp
12-bulk_server/: .travis.yml
13-join_server/: .travis.yml  CMakeLists.txt  Doxyfile
13-join_server/src/: main.cpp  tests.cpp
13-join_server/src/include/logic/: command.h  message.h
13-join_server/src/include/network/: server.h  session.h
13-join_server/src/include/utils/: thread_pool.h
13-join_server/src/logic/: command.cpp  database.cpp  message.cpp
13-join_server/src/network/: session.cpp
14-yamr/: CMakeLists.txt  Doxyfile
14-yamr/data/: input1.txt  input3.txt
14-yamr/src/: main.cpp  mapper.cpp  mapper.h  reducer.cpp  reducer.h  splitter.cpp  tests.cpp  thread_pool.h
15-kkmeans/: CMakeLists.txt  graphics.py
16-realty/: CMakeLists.txt  dataset.csv
data/: input2.txt  input4.txt  iris.csv  random.csv
docs/html/: circle_8h__dep__incl.md5  classmy_1_1Circle__coll__graph.map  classmy_1_1Document-members.html  classmy_1_1Document.html  classmy_1_1IRenderable-members.html  classmy_1_1IRenderable__inherit__graph.md5  classmy_1_1IShape__coll__graph.md5  classmy_1_1Rectangle.html  classmy_1_1Rectangle__inherit__graph.map  classmy_1_1Segment__coll__graph.map  classmy_1_1Segment__inherit__graph.md5  color_8h_source.html  dir_000002_000003.html  dir_000004_000003.html  dir_000004_000005.html  dir_08b03aabef5f7e8c5c26c812ba7beddf_dep.map  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_514e3c103e2720390531b246da6919c5.html  dir_514e3c103e2720390531b246da6919c5_dep.md5  dir_844f6ab5c2ae79211596f3dcdd81adb7.html  dir_844f6ab5c2ae79211596f3dcdd81adb7_dep.map  file__io_8h.html  (+20 more)
lib/: async.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/: apartment.cpp  apartment.h  bulk_command.cpp  bulk_command.h  bulk_command_processor.cpp  bulk_command_processor.h  command_storage.cpp  command_storage.h  console_reader.cpp  console_reader.h  console_writer.cpp  console_writer.h  controller.cpp  controller.h  duplicate_finder.cpp  duplicate_finder.h  file_writer.cpp  file_writer.h  filesystem_path_hash.cpp  filesystem_path_hash.h  filesystem_traverser.h  main.cpp  mapper.cpp  mapper.h  mask_filesystem_traverser.h  matrix.h  print_ip.h  rclss.cpp  rclst.cpp  reducer.cpp  reducer.h  splitter.cpp  splitter.h  tests.cpp
(+102 files in other folders)
